# image-resizing

./: .gitattributes  .gitignore  .gitmodules  README.md  justfile
benchmarking/: pyproject.toml
benchmarking/notebooks/: bar.ipynb  energy.ipynb  line.ipynb
benchmarking/runner/: aggregate.js  run.js
src/: constants.hpp  main.cpp
src/algorithms/: algorithm.hpp  bilinear-interpolation.cpp  nearest-neighbor.cpp
src/platform/: cpu.cpp  gpu.cu  platform.hpp
