[tool.poetry]
name = "image-resizing"
version = "0.1.0"
description = ""
authors = ["aetheryx <mhzy.ali@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
